crates/lang-parse/tests/snapshots/literal__literal_bool.snap
---
source: crates/lang-parse/tests/literal.rs
expression: "ast::Literal::parse(&context)"
---
Ok(
    Literal {
        span: 0..4,
        extras: ItemExtras {
            leading: LeadingExtras(
                [],
            ),
            trailing: TrailingExtras(
                [],
            ),
        },
        literal: Bool(
            BoolLiteral {
                span: 0..4,
                value: true,
            },
        ),
    },
)
