crates/lang-parse/tests/snapshots/literal__literal_length.snap
---
source: crates/lang-parse/tests/literal.rs
expression: "ast::Literal::parse(&context)"
---
Ok(
    Literal {
        span: 0..4,
        extras: ItemExtras {
            leading: LeadingExtras(
                [],
            ),
            trailing: TrailingExtras(
                [],
            ),
        },
        literal: Quantity(
            QuantityLiteral {
                span: 0..4,
                value: "42",
                unit: Unit {
                    span: 2..4,
                    name: "mm",
                },
            },
        ),
    },
)
